# pogodynka2

./: .pre-commit-config.yaml  REAME.md  pyproject.toml  requirements.txt
pogodynka/: cmd.py  store.py
pogodynka/sensor/: __init__.py  ds18b20.py  sds011.py
tests/pogodynka/: test_store.py
tests/pogodynka/sensor/: test_ds18b20.py  test_sds011.py
